Tweaks to project structure
- Use tabs for Makefile. Make sure .editorconfig knows that
- Format Makefule properly using tabs and not spaces
- Ignore serverless env file in git
- Read env variables from external env file in serverless config
- Set timeout to 180 for lambda function

--- a/serverless.yml
+++ b/serverless.yml
@@ -6,12 +6,13 @@ provider:
   stage: ${opt:stage}
   region: ap-southeast-1
   memorySize: 128
+  timeout: 180
   environment:
-    HOOK_SECRET: ${opt:secret}
-    API_KEY: ${opt.apikey}
-    API_SECRET: ${opt.apisecret}
-    ACCESS_TOKEN: ${opt.accesstoken}
-    ACCESS_SECRET: ${opt.accesssecret}
+    HOOK_SECRET: ${self:custom.secret}
+    API_KEY: ${self:custom.apikey}
+    API_SECRET: ${self:custom.apisecret}
+    ACCESS_TOKEN: ${self:custom.accesstoken}
+    ACCESS_SECRET: ${self:custom.accesssecret}
   iamRoleStatements:
     - Effect: "Allow"
       Action:
@@ -26,6 +27,8 @@ provider:
       Resource:
         - "*"
 
+custom: ${file(serverless.env.yml)}
+
 package:
  exclude:
    - ./**
@@ -37,6 +40,6 @@ functions:
     handler: bin/blogposter
     events:
       - http:
-        path: status
-        method: post
-        cors: true
+          path: status
+          method: post
+          cors: true
