Add new enviroment variable
- Hold the base URL for blog in a new environment variable.
- Used to generate the link to new post in tweet

--- a/serverless.yml
+++ b/serverless.yml
@@ -13,6 +13,7 @@ provider:
     API_SECRET: ${self:custom.apisecret}
     ACCESS_TOKEN: ${self:custom.accesstoken}
     ACCESS_SECRET: ${self:custom.accesssecret}
+    BASE_URL: ${self:custom.baseurl}
   iamRoleStatements:
     - Effect: "Allow"
       Action:
